添加启动广告

--- a/index.html
+++ b/index.html
@@ -111,7 +111,8 @@
         <div class="box"><div class="boxLoading"></div><p>0%</p></div>
     </div>
     <div class="loading_wrap">
-        <img src="./images/loading.gif" alt="" class="loading_in">
+        <!--<img src="./images/loading.gif" alt="" class="loading_in">-->
+        <img src="./images/launch.jpg" alt="" class="loading_in">
     </div>
     <script src="./js/jquery.min.js"></script>
     <script src="./js/spritespin.min.js"></script>
